--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.7"
 flask = "^1.1"
 
 [tool.poetry.dev-dependencies]
+python-dotenv = "^0.10.3"
+pytest = "^5.0"
+pytest-flask = "^0.15.0"
+black = {version = ">=19",allows-prereleases = true}
 
 [build-system]
 requires = ["poetry>=0.12"]
